--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -51,6 +51,8 @@
   --font-body: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
   --font-code: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 
+  --ifm-code-padding-vertical: 0.12rem;
+  --ifm-code-padding-horizontal: 0.25rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
